Fix CSS path issue in subdomains.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   Serve IFRAME full-screen.
+   ========================================================================== */
+
 body, html {
 	margin: 0;
 	padding: 0;
