--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="{{site.description}}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="{{site.github.keywords}}">
+<meta name="keywords" content="{{site.keywords}}">
 <title>{{site.title}}</title>
 <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
 {% include ga.js %}
