--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- META -->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="{{site.description}}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="{{site.keywords}}">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- CSS -->
+<link href="{{ "./css/main.css" | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 <title>{{site.title}}</title>
-<link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
+<!-- SCRIPT -->
 {% include ga.js %}
-{% include custom.js %}
 </head>
 <body>
 	<div id="content">
